[package]
name = "xiv-crafter-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11.12"
lazy_static = "1.4.0"
bytes = "1.2.1"

[dev-dependencies]
tokio-test = "0.4.2"
