[package]
name = "garlandtools"
version = "0.1.1"
edition = "2021"
authors = ["Sakul Flee <me@sakul-flee.de>"]
description = "A library for interacting with the GarlandTools API"
license = "MIT"
repository = "https://github.com/Sakul6499/Rust-GarlandTools"

[dependencies]
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11.12"
lazy_static = "1.4.0"
bytes = "1.2.1"

[dev-dependencies]
tokio-test = "0.4.4"
